--- a/assets/css/selecao.css
+++ b/assets/css/selecao.css
@@ -757,46 +757,45 @@ a:hover {
   }
 
   .features p {
-      text-align: center;
+    text-align: center;
   }
 
   .features h4 {
-      color: black;
-      font-size: 18px;
+    color: black;
+    font-size: 18px;
   }
 
   .features a {
-      display: flex; 
-      align-items: center;
-      flex-direction: column;
-      padding: 0px 20px;
-      border-radius: 10px;
-      border: 3px solid #ffffff;
-  }
-
-  .features img {
-    margin: 10px auto;
+    display: flex; 
+    /* align-items: center; */
+    flex-direction: column;
+    padding: 0px 20px;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+    transition: all 0.4s ease-in-out;
   }
 
   .features a:hover {
     box-shadow: 0 5px 10px#1976D2;
-}
+  }
+
+  .features img {
+    margin: 5px auto 20px;
+  }
+
+  .features .featuresCnameItemA {
+    padding: 0px 0px;
+  }
+
+  .features .featuresCnameItemImg {
+    margin-top: 0px;
+  }
 
   .features .featuresItemContainer {
     display: flex; 
     justify-content: space-between; 
     margin: 0 20%;
-}
-
-  /* .features .testImage {
-      background-color:rgb(161, 14, 230);
-      height:50px;
-      border-radius:50%;
-      -moz-border-radius:50%;
-      -webkit-border-radius:50%;
-      width:50px;
-      margin: 10px auto;
-  } */
+  }
   
   @media (max-width: 768px) {
     .features .nav-link i {
@@ -898,6 +897,10 @@ a:hover {
   /*--------------------------------------------------------------
   # Services
   --------------------------------------------------------------*/
+  .services .container {
+    margin-top: -60px;
+  }
+
   .services .icon-box {
     padding: 30px;
     position: relative;
