--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,23 +1,61 @@
 .gallery {
   width: 100%;
+  /* background-color: crimson; */
 }
 
 .gallery-container {
   align-items: center;
   display: flex;
-  height: 400px;
+  height: 300px;
   margin: 0 auto;
-  max-width: 1000px;
+  /* max-width: 1000px; */
+  max-width: 100%;
   position: relative;
+  /* background-color: darkcyan; */
 }
 
 .gallery-item {
-  height: 150px;
+  height: 200px;
   opacity: .4;
   position: absolute;
   transition: all 0.3s ease-in-out;
-  width: 150px;
+  /* width: 150px; */
+  width: 30%;
   z-index: 0;
+  background-color: #ffffff;
+  border-radius: 10px;
+}
+
+.gallery-item img {
+  width: 40%;
+  height: auto;
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
+.gallery-item h3 {
+  display: flex;
+  align-items: flex-end;
+  margin-right: 4%;
+  font-size: 2vw;
+  height: 75%;
+}
+
+.gallery-item p {
+  padding-top: 3%;
+  padding-bottom: 3%;
+  text-align: center;
+  font-size: 1.1vw;
+  /* background-color: #fff; */
+}
+
+.gallery-item-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 55%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .gallery-item.gallery-item-selected {
@@ -26,63 +64,99 @@
   opacity: 1;
   left: 50%;
   transform: translateX(-50%);
-  width: 300px;
-  z-index: 2;
-}
+  /* width: 300px; */
+  width: 50%;
+  z-index: 2;}
 
 .gallery-item.gallery-item-previous,
 .gallery-item.gallery-item-next {
-  height: 200px;
+  height: 250px;
   opacity: 1;
-  width: 200px;
+  /* width: 200px; */
+  width: 40%;
   z-index: 1;
 }
 
 .gallery-item.gallery-item-previous {
   left: 30%;
-  transform: translateX(-50%);
-}
+  transform: translateX(-50%);}
 
 .gallery-item.gallery-item-next {
   left: 70%;
-  transform: translateX(-50%);
-}
+  transform: translateX(-50%);}
 
 .gallery-item.gallery-item-first {
   left: 15%;
-  transform: translateX(-50%);
-}
+  transform: translateX(-50%);}
 
 .gallery-item.gallery-item-last {
   left: 85%;
-  transform: translateX(-50%);
+  transform: translateX(-50%);}
+
+.gallery-item .item1 {
+  background: linear-gradient(98deg, #fcbdb1  10%, rgba(0,0,0,0) 10%), linear-gradient(103deg, #fe9e93 18%, #fd7366 18%);
+}
+
+.gallery-item .item2 {
+  background: linear-gradient(100deg, #87d7d5  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #51cbc3 18%, #02bbaa 18%);
+}
+
+.gallery-item .item3 {
+  background: linear-gradient(100deg, #d6e7f7  10%, rgba(0,0,0,0) 10%), linear-gradient(107deg, #c2daf3 18%, #9ac2ec 18%);
+}
+
+.gallery-item .item4 {
+  background: linear-gradient(100deg, #ffedb1  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #fada73 18%, #eab93f 18%);
+}
+
+.gallery-item .item5 {
+  background: linear-gradient(100deg, #f5b8ff  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #f3a2ff 18%, #c86dd7 18%);
 }
 
 .gallery-controls {
   display: flex;
-  justify-content: center;
-  margin: 30px 0;
+  justify-content: space-between;
+  /* margin: 30px 0; */
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 25%;
+  width: 50%;
+  /* background-color: crimson; */
 }
 
-.gallery-controls button {
-  border: 0;
-  cursor: pointer;
-  font-size: 16px;
-  margin: 0 20px;
-  padding: 0 12px;
-  text-transform: capitalize;
+.gallery-controls .controlButton {
+  font-size: 1.5em;
+  color: #1976D2;
+  background-color: #fff;
+  border-radius: 50%;
 }
 
-.gallery-controls button:focus {
-  outline: none;
+.gallery-controls .controlButton:hover {
+  color: #ffffff;
+  background-color: #1976D2;
+  /* border-radius: 50%; */
+  box-shadow: 0 0 20px rgba(33, 33, 33, .2);
 }
 
 .gallery-controls-previous {
-  position: relative;
+  /* position: relative; */
+}
+
+.gallery-controls-previous:after {
+  /* content: '';
+	display: inline-block;
+  width: 1em;
+  height: 1em;
+  border-top: 0.3em solid #333;
+  border-right: 0.3em solid #333;
+  -moz-transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg); */
 }
 
 .gallery-controls-previous::before {
-  border: solid #000;
+  /* border: solid #000;
   border-width: 0 2px 2px 0;
   content: '';
   display: inline-block;
@@ -93,19 +167,19 @@
   top: 0;
   transform: rotate(135deg) translateY(-50%);
   transition: left 0.15s ease-in-out;
-  width: 4px;
+  width: 4px; */
 }
 
 .gallery-controls-previous:hover::before {
-  left: -18px;
+  /* left: -18px; */
 }
 
 .gallery-controls-next {
-  position: relative;
+  /* position: relative; */
 }
 
 .gallery-controls-next::before {
-  border: solid #000;
+  /* border: solid #000;
   border-width: 0 2px 2px 0;
   content: '';
   display: inline-block;
@@ -116,11 +190,11 @@
   top: 50%;
   transform: rotate(-45deg) translateY(-50%);
   transition: right 0.15s ease-in-out;
-  width: 4px;
+  width: 4px; */
 }
 
 .gallery-controls-next:hover::before {
-  right: -18px;
+  /* right: -18px; */
 }
 
 .gallery-nav {
@@ -143,4 +217,75 @@
 
 .gallery-nav li.gallery-item-selected {
   background: #555;
+}
+
+@media (max-width: 910px) {
+  /* .gallery-item-content {
+    background: linear-gradient(93deg, #d6e7f7  10%, rgba(0,0,0,0) 10%), linear-gradient(98deg, #c2daf3 18%, #9ac2ec 18%);
+  } */
+  .gallery-item {
+    width: 150px;
+    height: 250px;
+  }
+  .gallery-item p {
+    height: 150px;
+    font-size: 5px;
+  }
+  
+  /* .gallery-item.gallery-item-selected {
+    width: 90%;
+  } */
+}
+
+@media (min-width: 365px) and (max-width: 910px) {
+  .gallery-item {
+    width: 200px;
+    height: 250px;
+  }
+
+  .gallery-item.gallery-item-previous,
+  .gallery-item.gallery-item-next {
+    /* width: 150px; */
+    width: 45%;
+    height: 280px;
+  }
+
+  .gallery-item.gallery-item-selected {
+    width: 70%;
+  }
+
+  .gallery-controls {
+    width: 70%;
+    left: 15%;
+  }
+
+  .gallery-item.gallery-item-selected p {
+    /* font-size: 2vw; */
+  }
+
+  .gallery-item.gallery-item-selected img {
+    width: 60%;
+  }
+}
+
+@media (max-width: 364px) {
+  .gallery-item.gallery-item-previous,
+  .gallery-item.gallery-item-next {
+    width: 200px;
+    /* width: 60%; */
+    height: 280px;
+  }
+
+  .gallery-item.gallery-item-selected {
+    width: 90%;
+  }
+
+  .gallery-controls {
+    width: 90%;
+    left: 5%;
+  }
+
+  .gallery-item.gallery-item-selected img {
+    width: 70%;
+  }
 }
