modifing contract and footer 1

--- a/assets/css/selecao.css
+++ b/assets/css/selecao.css
@@ -1429,6 +1429,10 @@ a:hover {
   /*--------------------------------------------------------------
   # Contact
   --------------------------------------------------------------*/
+  .contact {
+    /* height: 300px; */
+  }
+
   .contact .info {
     width: 100%;
     background: #fff;
