--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1204,7 +1204,7 @@ a:hover {
   @media (max-width: 991px) {
     .globe .container {
       display: flex;
-      flex-direction: column;
+      flex-direction: column-reverse;
     }
   }
   
