--- a/assets/css/carousel1.css
+++ b/assets/css/carousel1.css
@@ -64,12 +64,14 @@
     opacity: 1;
     left: 50%;
     transform: translateX(-50%);
+
     /* width: 300px; */
     width: 50%;
-    z-index: 2;}
+    z-index: 2;
+}
 
-    .galleryCooperationItem.gallery-item-previous,
-    .galleryCooperationItem.gallery-item-next {
+.galleryCooperationItem.gallery-item-previous,
+.galleryCooperationItem.gallery-item-next {
     height: 250px;
     opacity: 1;
     /* width: 200px; */
@@ -98,23 +100,23 @@
 }
 
 .cooperation .galleryCooperationItem .item1 {
-    background: linear-gradient(98deg, #fcbdb1  10%, rgba(0,0,0,0) 10%), linear-gradient(103deg, #fe9e93 18%, #fd7366 18%);
+    background: red;
 }
 
 .cooperation .galleryCooperationItem .item2 {
-    background: linear-gradient(100deg, #87d7d5  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #51cbc3 18%, #02bbaa 18%);
+    background: green;
 }
 
 .cooperation .galleryCooperationItem .item3 {
-    background: linear-gradient(100deg, #d6e7f7  10%, rgba(0,0,0,0) 10%), linear-gradient(107deg, #c2daf3 18%, #9ac2ec 18%);
+    background: yellow;
 }
 
 .cooperation .galleryCooperationItem .item4 {
-    background: linear-gradient(100deg, #ffedb1  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #fada73 18%, #eab93f 18%);
+    background: blue;
 }
 
 .cooperation .galleryCooperationItem .item5 {
-    background: linear-gradient(100deg, #f5b8ff  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #f3a2ff 18%, #c86dd7 18%);
+    background: orange;
 }
 
 .cooperation .galleryCooperationControls {
