--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1172,9 +1172,9 @@ a:hover {
 
   /* cooperation */
   .cooperation {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    background-color: rgb(213, 230, 179, 0.5);
+    /* padding-top: 0px;
+    padding-bottom: 0px; */
+    /* background-color: rgb(213, 230, 179, 0.5); */
   }
 
   .cooperation .container {
@@ -1182,7 +1182,7 @@ a:hover {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(243, 149, 149, 0.5);
+    /* background-color: rgb(243, 149, 149, 0.5); */
     height: 600px;
   }
 
@@ -1205,8 +1205,8 @@ a:hover {
   .cooperation .cooperationContent {
     width: 100%;
     height: 100%;
-    /* margin-top: -200px; */
-    background-color: violet;
+    margin-top: 10%;
+    /* background-color: violet; */
 
     display: flex;
     flex-direction: row;
@@ -1216,14 +1216,14 @@ a:hover {
   }
 
   .cooperation .sectionTitleDiv {
-    background-color: yellow;
+    /* background-color: yellow; */
     margin: 0 20px 0 0;
     width: 33%;
     /* height: 70%; */
   }
 
   .cooperation .cooperationCarousel {
-    background-color: chartreuse; 
+    /* background-color: chartreuse;  */
     width: 60%
   }
 
@@ -1237,6 +1237,7 @@ a:hover {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
+      margin-top: 0%;
     }
 
     .cooperation .sectionTitleDiv {
