Adjust globe section: globe camera close, and globe img path to base64

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,10 @@ a:hover {
     transition: all 0.4s ease-in-out;
   }
 
+  /* #header .navMenuImg:focus + ul {
+    visibility: visible;
+  } */
+
   #header .mobile-ul {
     display: none;
     width: 200px;
