--- a/assets/css/servicesCarousel.css
+++ b/assets/css/servicesCarousel.css
@@ -1,25 +1,24 @@
 .gallery {
   width: 100%;
-  /* background-color: crimson; */
+  height: 300px;
+  /* background-color: rgb(20, 220, 97); */
 }
 
 .gallery-container {
   align-items: center;
   display: flex;
-  height: 300px;
-  margin: 0 auto;
-  /* max-width: 1000px; */
+  height: 100%;
+  /* margin: 0 auto; */
   max-width: 100%;
   position: relative;
-  /* background-color: darkcyan; */
+  background-color: rgb(151, 54, 146);
 }
 
 .gallery-item {
-  height: 200px;
+  height: 60%;
   opacity: .4;
   position: absolute;
   transition: all 0.3s ease-in-out;
-  /* width: 150px; */
   width: 30%;
   z-index: 0;
   background-color: #ffffff;
@@ -27,10 +26,13 @@
 }
 
 .gallery-item img {
-  width: 40%;
+  /* width: 40%;
   height: auto;
   padding-top: 3%;
-  padding-bottom: 3%;
+  padding-bottom: 3%; */
+  width: 100%;
+  max-width: 35%;
+  height: auto;
 }
 
 .gallery-item h3 {
@@ -60,7 +62,7 @@
 
 .gallery-item.gallery-item-selected {
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
-  height: 300px;
+  height: 100%;
   opacity: 1;
   left: 50%;
   transform: translateX(-50%);
@@ -70,7 +72,8 @@
 
 .gallery-item.gallery-item-previous,
 .gallery-item.gallery-item-next {
-  height: 250px;
+  /* height: 250px; */
+  height: 80%;
   opacity: 1;
   /* width: 200px; */
   width: 40%;
