--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -911,119 +911,12 @@ a:hover {
   }
   
   /*--------------------------------------------------------------
-  # Cta
-  --------------------------------------------------------------*/
-  .cta {
-    background: #2a2c39;
-    padding: 80px 0;
-  }
-  
-  .cta h3 {
-    color: #fff;
-    font-size: 28px;
-    font-weight: 700;
-  }
-  
-  .cta p {
-    color: #fff;
-  }
-  
-  .cta .cta-btn {
-    font-family: "Raleway", sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 14px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 12px 30px;
-    border-radius: 50px;
-    transition: 0.5s;
-    margin: 10px;
-    color: #fff;
-    background: #ef6603;
-  }
-  
-  .cta .cta-btn:hover {
-    background: #fff;
-    color: #ef6603;
-  }
-  
-  @media (max-width: 1024px) {
-    .cta {
-      background-attachment: scroll;
-    }
-  }
-  
-  @media (min-width: 769px) {
-    .cta .cta-btn-container {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-    }
-  }
-  
-  /*--------------------------------------------------------------
   # Services
   --------------------------------------------------------------*/
   .services {
     padding-top: 0px;
     padding-bottom: 0px;
-  }
-
-  .services .container {
-    margin-top: -60px;
-  }
-
-  .services .icon-box {
-    padding: 30px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
-    transition: all 0.4s ease-in-out;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .services .icon-box:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 2px 35px 0 rgba(68, 88, 144, 0.2);
-  }
-  
-  .services .icon {
-    position: absolute;
-    left: -20px;
-    top: calc(50% - 30px);
-  }
-  
-  .services .icon i {
-    font-size: 64px;
-    line-height: 1;
-    transition: 0.5s;
-  }
-  
-  .services .title {
-    margin-left: 40px;
-    font-weight: 700;
-    margin-bottom: 15px;
-    font-size: 18px;
-  }
-  
-  .services .title a {
-    color: #2a2c39;
-    transition: ease-in-out 0.3s;
-  }
-  
-  .services .title a:hover {
-    color: #ef6603;
-  }
-  
-  .services .description {
-    font-size: 14px;
-    margin-left: 40px;
-    line-height: 24px;
-    margin-bottom: 0;
+    background-color: brown;
   }
   
   /*--------------------------------------------------------------
