--- a/assets/css/servicesCarousel.css
+++ b/assets/css/servicesCarousel.css
@@ -1,17 +1,27 @@
 .gallery {
-  width: 100%;
-  height: 300px;
+  /* width: 100%;
+  height: 500px; */
   /* background-color: rgb(20, 220, 97); */
+  position: relative;
+  width: 100%;
+  padding-top: 30%;
 }
 
 .gallery-container {
-  align-items: center;
+  /* align-items: center;
   display: flex;
   height: 100%;
-  /* margin: 0 auto; */
   max-width: 100%;
-  position: relative;
+  position: relative; */
   background-color: rgb(151, 54, 146);
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  display: flex;
+  align-items: center;
 }
 
 .gallery-item {
@@ -19,7 +29,7 @@
   opacity: .4;
   position: absolute;
   transition: all 0.3s ease-in-out;
-  width: 30%;
+  width: 50%;
   z-index: 0;
   background-color: #ffffff;
   border-radius: 10px;
@@ -47,8 +57,7 @@
   padding-top: 3%;
   padding-bottom: 3%;
   text-align: center;
-  font-size: 1.1vw;
-  /* background-color: #fff; */
+  font-size: 1vw;
 }
 
 .gallery-item-content {
@@ -67,7 +76,7 @@
   left: 50%;
   transform: translateX(-50%);
   /* width: 300px; */
-  width: 50%;
+  width: 70%;
   z-index: 2;}
 
 .gallery-item.gallery-item-previous,
@@ -76,7 +85,7 @@
   height: 80%;
   opacity: 1;
   /* width: 200px; */
-  width: 40%;
+  width: 50%;
   z-index: 1;
 }
 
@@ -146,64 +155,6 @@
   box-shadow: 0 0 20px rgba(33, 33, 33, .2);
 }
 
-.gallery-controls-previous {
-  /* position: relative; */
-}
-
-.gallery-controls-previous:after {
-  /* content: '';
-	display: inline-block;
-  width: 1em;
-  height: 1em;
-  border-top: 0.3em solid #333;
-  border-right: 0.3em solid #333;
-  -moz-transform: rotate(-135deg);
-  -webkit-transform: rotate(-135deg);
-  transform: rotate(-135deg); */
-}
-
-.gallery-controls-previous::before {
-  /* border: solid #000;
-  border-width: 0 2px 2px 0;
-  content: '';
-  display: inline-block;
-  height: 4px;
-  left: -10px;
-  padding: 2px;
-  position: absolute;
-  top: 0;
-  transform: rotate(135deg) translateY(-50%);
-  transition: left 0.15s ease-in-out;
-  width: 4px; */
-}
-
-.gallery-controls-previous:hover::before {
-  /* left: -18px; */
-}
-
-.gallery-controls-next {
-  /* position: relative; */
-}
-
-.gallery-controls-next::before {
-  /* border: solid #000;
-  border-width: 0 2px 2px 0;
-  content: '';
-  display: inline-block;
-  height: 4px;
-  padding: 2px;
-  position: absolute;
-  right: -10px;
-  top: 50%;
-  transform: rotate(-45deg) translateY(-50%);
-  transition: right 0.15s ease-in-out;
-  width: 4px; */
-}
-
-.gallery-controls-next:hover::before {
-  /* right: -18px; */
-}
-
 .gallery-nav {
   bottom: -15px;
   display: flex;
@@ -226,33 +177,54 @@
   background: #555;
 }
 
-@media (max-width: 910px) {
-  /* .gallery-item-content {
-    background: linear-gradient(93deg, #d6e7f7  10%, rgba(0,0,0,0) 10%), linear-gradient(98deg, #c2daf3 18%, #9ac2ec 18%);
-  } */
+@media (max-width: 991px) {
+  .gallery {
+    padding-top: 40%;
+  }
+
   .gallery-item {
+    width: 10%;
+    height: 10%;
+  }
+
+  .gallery-item.gallery-item-previous,
+  .gallery-item.gallery-item-next {
+    width: 10%;
+    height: 10%;
+  }
+
+  .gallery-item.gallery-item-selected {
+    display: block;
+    width: 80%;
+  }
+  
+}
+
+@media (max-width: 321px) {
+  .gallery {
+    padding-top: 47%;
+  }
+}
+
+@media (max-width: 910px) {
+  /* .gallery-item {
     width: 150px;
     height: 250px;
   }
   .gallery-item p {
     height: 150px;
     font-size: 5px;
-  }
-  
-  /* .gallery-item.gallery-item-selected {
-    width: 90%;
   } */
 }
 
 @media (min-width: 365px) and (max-width: 991px) {
-  .gallery-item {
+  /* .gallery-item {
     width: 200px;
     height: 250px;
   }
 
   .gallery-item.gallery-item-previous,
   .gallery-item.gallery-item-next {
-    /* width: 150px; */
     width: 45%;
     height: 280px;
   }
@@ -266,20 +238,15 @@
     left: 15%;
   }
 
-  .gallery-item.gallery-item-selected p {
-    /* font-size: 2vw; */
-  }
-
   .gallery-item.gallery-item-selected img {
     width: 60%;
-  }
+  } */
 }
 
 @media (max-width: 364px) {
-  .gallery-item.gallery-item-previous,
+  /* .gallery-item.gallery-item-previous,
   .gallery-item.gallery-item-next {
     width: 200px;
-    /* width: 60%; */
     height: 280px;
   }
 
@@ -294,5 +261,5 @@
 
   .gallery-item.gallery-item-selected img {
     width: 70%;
-  }
+  } */
 }
