--- a/assets/css/servicesCarousel.css
+++ b/assets/css/servicesCarousel.css
@@ -1,19 +1,10 @@
 .gallery {
-  /* width: 100%;
-  height: 500px; */
-  /* background-color: rgb(20, 220, 97); */
   position: relative;
   width: 100%;
   padding-top: 30%;
 }
 
 .gallery-container {
-  /* align-items: center;
-  display: flex;
-  height: 100%;
-  max-width: 100%;
-  position: relative; */
-  background-color: rgb(151, 54, 146);
   position: absolute;
   top: 0;
   left: 0;
@@ -36,10 +27,6 @@
 }
 
 .gallery-item img {
-  /* width: 40%;
-  height: auto;
-  padding-top: 3%;
-  padding-bottom: 3%; */
   width: 100%;
   max-width: 35%;
   height: auto;
@@ -75,16 +62,13 @@
   opacity: 1;
   left: 50%;
   transform: translateX(-50%);
-  /* width: 300px; */
   width: 70%;
   z-index: 2;}
 
 .gallery-item.gallery-item-previous,
 .gallery-item.gallery-item-next {
-  /* height: 250px; */
   height: 80%;
   opacity: 1;
-  /* width: 200px; */
   width: 50%;
   z-index: 1;
 }
@@ -132,17 +116,15 @@
 .gallery-controls {
   display: flex;
   justify-content: space-between;
-  /* margin: 30px 0; */
-  position: absolute;
+  position: relative;
   z-index: 2;
-  top: 50%;
-  left: 25%;
-  width: 50%;
-  /* background-color: crimson; */
+  top: 5%;
+  left: 13%;
+  width: 74%;
 }
 
 .gallery-controls .controlButton {
-  font-size: 1.5em;
+  font-size: 3.5vw;
   color: #1976D2;
   background-color: #fff;
   border-radius: 50%;
@@ -151,7 +133,6 @@
 .gallery-controls .controlButton:hover {
   color: #ffffff;
   background-color: #1976D2;
-  /* border-radius: 50%; */
   box-shadow: 0 0 20px rgba(33, 33, 33, .2);
 }
 
@@ -194,8 +175,16 @@
   }
 
   .gallery-item.gallery-item-selected {
-    display: block;
     width: 80%;
+  }
+
+  .gallery-controls {
+    width: 84%;
+    left: 8%;
+  }
+
+  .gallery-controls .controlButton {
+    font-size: 6vw;
   }
   
 }
@@ -204,62 +193,4 @@
   .gallery {
     padding-top: 47%;
   }
-}
-
-@media (max-width: 910px) {
-  /* .gallery-item {
-    width: 150px;
-    height: 250px;
-  }
-  .gallery-item p {
-    height: 150px;
-    font-size: 5px;
-  } */
-}
-
-@media (min-width: 365px) and (max-width: 991px) {
-  /* .gallery-item {
-    width: 200px;
-    height: 250px;
-  }
-
-  .gallery-item.gallery-item-previous,
-  .gallery-item.gallery-item-next {
-    width: 45%;
-    height: 280px;
-  }
-
-  .gallery-item.gallery-item-selected {
-    width: 100%;
-  }
-
-  .gallery-controls {
-    width: 70%;
-    left: 15%;
-  }
-
-  .gallery-item.gallery-item-selected img {
-    width: 60%;
-  } */
-}
-
-@media (max-width: 364px) {
-  /* .gallery-item.gallery-item-previous,
-  .gallery-item.gallery-item-next {
-    width: 200px;
-    height: 280px;
-  }
-
-  .gallery-item.gallery-item-selected {
-    width: 100%;
-  }
-
-  .gallery-controls {
-    width: 90%;
-    left: 5%;
-  }
-
-  .gallery-item.gallery-item-selected img {
-    width: 70%;
-  } */
 }
