--- a/assets/css/servicesCarousel.css
+++ b/assets/css/servicesCarousel.css
@@ -1,10 +1,10 @@
-.gallery {
+.services .gallery {
   position: relative;
   width: 100%;
   padding-top: 30%;
 }
 
-.gallery-container {
+.services .gallery-container {
   position: absolute;
   top: 0;
   left: 0;
@@ -15,7 +15,7 @@
   align-items: center;
 }
 
-.gallery-item {
+.services .gallery-item {
   height: 60%;
   opacity: .4;
   position: absolute;
@@ -26,13 +26,13 @@
   border-radius: 10px;
 }
 
-.gallery-item img {
+.services .gallery-item img {
   width: 100%;
   max-width: 35%;
   height: auto;
 }
 
-.gallery-item h3 {
+.services .gallery-item h3 {
   display: flex;
   align-items: flex-end;
   margin-right: 4%;
@@ -40,14 +40,14 @@
   height: 75%;
 }
 
-.gallery-item p {
+.services .gallery-item p {
   padding-top: 3%;
   padding-bottom: 3%;
   text-align: center;
   font-size: 1vw;
 }
 
-.gallery-item-content {
+.services .gallery-item-content {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -56,7 +56,7 @@
   border-top-right-radius: 10px;
 }
 
-.gallery-item.gallery-item-selected {
+.services .gallery-item.gallery-item-selected {
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
   height: 100%;
   opacity: 1;
@@ -65,55 +65,55 @@
   width: 70%;
   z-index: 2;}
 
-.gallery-item.gallery-item-previous,
-.gallery-item.gallery-item-next {
+.services .gallery-item.gallery-item-previous,
+.services .gallery-item.gallery-item-next {
   height: 80%;
   opacity: 1;
   width: 50%;
   z-index: 1;
 }
 
-.gallery-item.gallery-item-previous {
+.services .gallery-item.gallery-item-previous {
   left: 30%;
   transform: translateX(-50%);
 }
 
-.gallery-item.gallery-item-next {
+.services .gallery-item.gallery-item-next {
   left: 70%;
   transform: translateX(-50%);
 }
 
-.gallery-item.gallery-item-first {
+.services .gallery-item.gallery-item-first {
   left: 15%;
   transform: translateX(-50%);
 }
 
-.gallery-item.gallery-item-last {
+.services .gallery-item.gallery-item-last {
   left: 85%;
   transform: translateX(-50%);
 }
 
-.gallery-item .item1 {
+.services .gallery-item .item1 {
   background: linear-gradient(98deg, #fcbdb1  10%, rgba(0,0,0,0) 10%), linear-gradient(103deg, #fe9e93 18%, #fd7366 18%);
 }
 
-.gallery-item .item2 {
+.services .gallery-item .item2 {
   background: linear-gradient(100deg, #87d7d5  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #51cbc3 18%, #02bbaa 18%);
 }
 
-.gallery-item .item3 {
+.services .gallery-item .item3 {
   background: linear-gradient(100deg, #d6e7f7  10%, rgba(0,0,0,0) 10%), linear-gradient(107deg, #c2daf3 18%, #9ac2ec 18%);
 }
 
-.gallery-item .item4 {
+.services .gallery-item .item4 {
   background: linear-gradient(100deg, #ffedb1  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #fada73 18%, #eab93f 18%);
 }
 
-.gallery-item .item5 {
+.services .gallery-item .item5 {
   background: linear-gradient(100deg, #f5b8ff  10%, rgba(0,0,0,0) 10%), linear-gradient(110deg, #f3a2ff 18%, #c86dd7 18%);
 }
 
-.gallery-controls {
+.services .gallery-controls {
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -123,20 +123,20 @@
   width: 74%;
 }
 
-.gallery-controls .controlButton {
+.services .gallery-controls .controlButton {
   font-size: 3.5vw;
   color: #1976D2;
   background-color: #fff;
   border-radius: 50%;
 }
 
-.gallery-controls .controlButton:hover {
+.services .gallery-controls .controlButton:hover {
   color: #ffffff;
   background-color: #1976D2;
   box-shadow: 0 0 20px rgba(33, 33, 33, .2);
 }
 
-.gallery-nav {
+.services .gallery-nav {
   bottom: -15px;
   display: flex;
   justify-content: center;
@@ -146,7 +146,7 @@
   width: 100%;
 }
 
-.gallery-nav li {
+.services .gallery-nav li {
   background: #ccc;
   border-radius: 50%;
   height: 10px;
@@ -154,43 +154,43 @@
   width: 10px;
 }
 
-.gallery-nav li.gallery-item-selected {
+.services .gallery-nav li.gallery-item-selected {
   background: #555;
 }
 
 @media (max-width: 991px) {
-  .gallery {
+  .services .gallery {
     padding-top: 40%;
   }
 
-  .gallery-item {
+  .services .gallery-item {
     width: 10%;
     height: 10%;
   }
 
-  .gallery-item.gallery-item-previous,
-  .gallery-item.gallery-item-next {
+  .services .gallery-item.gallery-item-previous,
+  .services .gallery-item.gallery-item-next {
     width: 10%;
     height: 10%;
   }
 
-  .gallery-item.gallery-item-selected {
+  .services .gallery-item.gallery-item-selected {
     width: 80%;
   }
 
-  .gallery-controls {
+  .services .gallery-controls {
     width: 84%;
     left: 8%;
   }
 
-  .gallery-controls .controlButton {
+  .services .gallery-controls .controlButton {
     font-size: 6vw;
   }
   
 }
 
 @media (max-width: 321px) {
-  .gallery {
+  .services .gallery {
     padding-top: 47%;
   }
 }
