--- a/assets/css/servicesCarousel.css
+++ b/assets/css/servicesCarousel.css
@@ -20,7 +20,7 @@
   opacity: .4;
   position: absolute;
   transition: all 0.3s ease-in-out;
-  width: 50%;
+  width: 30%;
   z-index: 0;
   background-color: #ffffff;
   border-radius: 10px;
@@ -28,7 +28,7 @@
 
 .services .gallery-item img {
   width: 100%;
-  max-width: 35%;
+  max-width: 55%;
   height: auto;
 }
 
@@ -62,14 +62,14 @@
   opacity: 1;
   left: 50%;
   transform: translateX(-50%);
-  width: 70%;
+  width: 45%;
   z-index: 2;}
 
 .services .gallery-item.gallery-item-previous,
 .services .gallery-item.gallery-item-next {
   height: 80%;
   opacity: 1;
-  width: 50%;
+  width: 40%;
   z-index: 1;
 }
 
@@ -119,8 +119,8 @@
   position: relative;
   z-index: 2;
   top: 5%;
-  left: 13%;
-  width: 74%;
+  left: 26%;
+  width: 48%;
 }
 
 .services .gallery-controls .controlButton {
@@ -185,6 +185,10 @@
 
   .services .gallery-controls .controlButton {
     font-size: 6vw;
+  }
+
+  .services .gallery-item img {
+    max-width: 35%;
   }
   
 }
